tests/samples/negative/resources/move_defer_block_result_after_move.ax
module move_defer_block_result_after_move;

fn consume<T>(value: T) -> void {
}

fn return_then_defer<T>(value: T) -> T {
    return {
        defer consume(value);
        value
    };
}

fn main() -> i32 {
    return 0;
}
